<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.likhachev.e_journal.presentation.ui.student_performance.StudentPerformanceFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subject_spinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/bg_day_of_week"
        android:fontFamily="@font/anonymous_pro_regular"
        android:gravity="center"
        android:textColor="@color/spinner_text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Кубановедение" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/subject_spinner"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/charts_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/averageGradesTitle"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anonymous_pro_bold"
                android:text="@string/average_grades_text_view"
                android:textColor="@color/title_text_color"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- График среднего балла -->
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/averageGradesChart"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginTop="-6dp"
                app:layout_constraintTop_toBottomOf="@id/averageGradesTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/presenceAndAbsenceTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:fontFamily="@font/anonymous_pro_bold"
                android:text="@string/attendance_text_view"
                android:textColor="@color/title_text_color"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/averageGradesChart" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/presenceAndAbsenceChart"
                android:layout_width="0dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="-10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/presenceAndAbsenceTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/not_found_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">

        <TextView
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anonymous_pro_regular"
            android:textColor="@color/title_text_color"
            android:textSize="16sp"
            android:text="@string/data_not_found_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/update_button_background_tint_color"
            android:text="@string/update_button_text"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:fontFamily="@font/anonymous_pro_bold"
            android:textColor="@color/brown"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
